--- a/ptp_rus/localisation/gle_l_russian.yml
+++ b/ptp_rus/localisation/gle_l_russian.yml
@@ -3,16 +3,17 @@
 ####################################
 ###Please Translate these, somehow Paradox forgot to translate them.###
  mod_planet_jobs_minerals_upkeep_mult: "£minerals£ Потребление минералов £job£ рабочими"
+
  mod_planet_doctors_unity_produces_add: "£unity£ $unity$ от £job_healthcare£ $job_healthcare_plural$"
  mod_planet_doctors_society_research_produces_add: "£society_research£ $society_research$ от £job_healthcare£ $job_healthcare_plural$"
  mod_planet_culture_workers_society_research_produces_add: "£society_research£ $society_research$ от £job_culture_worker£ $job_culture_worker_plural$"
  mod_planet_culture_workers_unity_produces_add: "£unity£ $unity$ от £job_culture_worker£ $job_culture_worker_plural$"
  mod_planet_soldiers_unity_produces_add: "£unity£ $unity$ от £job_soldier£ $job_soldier_plural$"
-# mod_planet_metallurgists_upkeep_mult: "$job_foundry$ upkeep"
- mod_planet_metallurgists_minerals_upkeep_mult: "£minerals£ Потребление минералов - £job_foundry£ $job_foundry$"
+# mod_planet_metallurgists_upkeep_mult: "Содержание $job_foundry$"
+ mod_planet_metallurgists_minerals_upkeep_mult: "£minerals£ Потребление минералов £job_foundry£ металлургами"
  mod_planet_metallurgists_unity_produces_add: "£unity£ $unity$ от £job_foundry£ $job_foundry_plural$"
-# mod_planet_artisans_upkeep_mult: "$job_artisan$ upkeep"
- mod_planet_artisans_minerals_upkeep_mult: "£minerals£ Потребление минералов - £job_artisan£ $job_artisan$"
+# mod_planet_artisans_upkeep_mult: "Содержание $job_artisan$"
+ mod_planet_artisans_minerals_upkeep_mult: "£minerals£ Потребление минералов £job_artisan£ ремесленниками"
  mod_planet_entertainers_unity_produces_add: "£unity£ $unity$ от £job_entertainer£ $job_entertainer_plural$"
  mod_planet_duelists_unity_produces_add: "£unity£ $unity$ от £job_duelist£ $job_duelist_plural$"
  mod_planet_managers_unity_produces_add: "£unity£ $unity$ от £job_manager£ $job_manager_plural$"
@@ -22,32 +23,32 @@
  mod_planet_enforcers_unity_produces_add: "£unity£ $unity$ от £job_enforcer£ $job_enforcer_plural$"
  mod_planet_telepaths_society_research_produces_add: "£society_research£ $society_research$ от £job_enforcer£ $job_enforcer_plural$"
  mod_planet_telepaths_unity_produces_add: "£unity£ $unity$ от £job_telepath£ $job_telepath_plural$"
-# mod_planet_pop_assemblers_upkeep_mult: "Upkeep from £job_artisan£ $job_artisan$ jobs"
+# mod_planet_pop_assemblers_upkeep_mult: "Содержание £job_artisan£ $job_artisan$"
  mod_planet_synapse_drones_unity_produces_add: "£unity£ $unity$ от £job_synapse_drone£ $job_synapse_drone_plural$"
  mod_planet_evaluators_physics_research_produces_add: "£physics_research£ $physics_research$ от £job_evaluator£ $job_evaluator_plural$"
  mod_planet_evaluators_unity_produces_add: "£unity£ $unity$ от £job_evaluator£ $job_evaluator_plural$"
  mod_planet_bureaucrats_unity_produces_add: "£unity£ $unity$ от £job_bureaucrat£ $job_bureaucrat_plural$"
-
- planet_duelists:0 "Деятельность: дуэлянты"
-
+ 
+ planet_duelists:0 "Дуэлянт"
+ 
  mod_planet_pop_assemblers_unity_produces_add: "£unity£ $unity$ от £job_roboticist£ $planet_pop_assemblers$"
  mod_planet_pop_assemblers_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_roboticist£ $planet_pop_assemblers$"
-# mod_planet_chemists_upkeep_mult: "$job_chemist$ upkeep"
- mod_planet_chemists_minerals_upkeep_mult: "£minerals£ Потребление минералов - £job_chemist£ $job_chemist$"
+# mod_planet_chemists_upkeep_mult: "Содержание $job_chemist$"
+ mod_planet_chemists_minerals_upkeep_mult: "£minerals£ Потребление минералов £job_chemist£ химиками"
  mod_planet_chemists_unity_produces_add: "£unity£ $unity$ от £job_chemist£ $job_chemist_plural$"
  mod_planet_chemists_physics_research_produces_add: "£physics_research£ $physics_research$ от £job_chemist£ $job_chemist_plural$"
-# mod_planet_translucers_upkeep_mult: "$job_translucer$ upkeep"
- mod_planet_translucers_minerals_upkeep_mult: "£minerals£ Потребление минералов - £job_translucer£ $job_translucer$"
+# mod_planet_translucers_upkeep_mult: "Содержание $job_translucer$"
+ mod_planet_translucers_minerals_upkeep_mult: "£minerals£ Потребление минералов £job_translucer£ кристальщиками"
  mod_planet_translucers_unity_produces_add: "£unity£ $unity$ от £job_translucer£ $job_translucer_plural$"
  mod_planet_translucers_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_translucer£ $job_translucer_plural$"
-# mod_planet_refiners_upkeep_mult: "$job_gas_refiner$ upkeep"
- mod_planet_refiners_minerals_upkeep_mult: "£minerals£ Потребление минералов - £job_gas_refiner£ $job_gas_refiner$"
+# mod_planet_refiners_upkeep_mult: "Содержание $job_gas_refiner$"
+ mod_planet_refiners_minerals_upkeep_mult: "£minerals£ Потребление минералов £job_gas_refiner£ переработчиками"
  mod_planet_refiners_unity_produces_add: "£unity£ $unity$ от £job_gas_refiner£ $job_gas_refiner_plural$"
  mod_planet_refiners_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_gas_refiner£ $job_gas_refiner_plural$"
-# mod_planet_researchers_upkeep_mult: "$job_researcher$ upkeep"
+# mod_planet_researchers_upkeep_mult: "Содержание $job_researcher$"
  mod_planet_researchers_physics_research_produces_add: "£physics_research£ $physics_research$ от £job_researcher£ $job_researcher_plural$"
- mod_planet_researchers_society_research_produces_add: "£society_research£ $society_research$ от £job_researcher£ $job_researcher_plural$"
- mod_planet_researchers_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_researcher£ $job_researcher_plural$"
+ mod_planet_researchers_society_research_produces_add: "£society_research£ $society_research$ от £job_researcher£ $job_researcher_plural$" 
+ mod_planet_researchers_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_researcher£ $job_researcher_plural$" 
  mod_planet_researchers_unity_produces_add: "£unity£ $unity$ от £job_researcher£ $job_researcher_plural$"
  mod_planet_miners_unity_produces_add: "£unity£ $unity$ от £job_miner£ $job_miner_plural$"
  mod_planet_miners_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_miner£ $job_miner_plural$"
@@ -59,18 +60,21 @@
  mod_planet_merchants_unity_produces_add: "£unity£ $unity$ от £job_merchant£ $job_merchant_plural$"
  mod_planet_nobles_influence_produces_add: "£influence£ $influence$ от £job_noble£ $job_noble_plural$"
  mod_planet_nobles_unity_produces_add: "£unity£ $unity$ от £job_noble£ $job_noble_plural$"
- mod_planet_administrators_influence_produces_add: "£influence£ $influence$ от £job_administrator£ $job_administrator_plural$"
- mod_planet_administrators_unity_produces_add: "£unity£ $unity$ от £job_administrator£ $job_administrator_plural$"
+# mod_planet_administrators_influence_produces_add: "£influence£ $influence$ от £job_administrator£ $job_administrator_plural$"
+# mod_planet_administrators_unity_produces_add: "£unity£ $unity$ от £job_administrator£ $job_administrator_plural$"
+
+ mod_planet_politicians_influence_produces_add: "£influence£ $influence$ от £job_administrator£ $job_politician_plural$"
+ mod_planet_politicians_unity_produces_add: "£unity£ $unity$ от £job_administrator£ $job_politician_plural$"
 
 
- gle_trait_pretitle: "§LСтратегия губернатора:§! "
- gle_trait_secondtitle: "§LДополнтельная стратегия:§! "
- gle_trait_experienced: " (Опытный)"
- gle_trait_expert: " (Эксперт)"
- gle_trait_text: "§G§HСтратегия губернатора§! показывает какие £job£ §Yвиды деятельности§! губернатор может предоставить планетам, на которые он будет назначен."
+gle_trait_pretitle: "§LСтратегия губернатора:§! "
+gle_trait_secondtitle: "§LДополнтельная стратегия:§! "
+gle_trait_experienced: " (Опытный)"
+gle_trait_expert: " (Эксперт)"
+gle_trait_text: "§G§HСтратегия губернатора§! показывает какие £job£ §Yвиды деятельности§! он может предоставить планетам, на которые будет назначен."
 
- gle_trait_lv3: "§HСтанет опытным на уровне навыка §Y3§!\n\n"
- gle_trait_lv8: "§HСтанет экспертом на уровне навыка §Y8§!\n\n"
+gle_trait_lv3: "§HСтанет опытным на §Y3§! уровне навыка\n\n"
+ gle_trait_lv8: "§HСтанет экспертом на §Y8§! уровне навыка\n\n"
 
 
 
@@ -221,14 +225,14 @@
  gle_trait_chemist_lv1_desc: "$gle_trait_lv3$$gle_trait_text$"
  gle_trait_chemist_lv2_desc: "$gle_trait_lv8$$gle_trait_text$"
  gle_trait_chemist_lv3_desc: "$gle_trait_text$"
- gle_trait_translucer: "Специалист по кристаллам"
+ gle_trait_translucer: "Кристальщик"
  gle_trait_translucer_lv1: "$gle_trait_pretitle$§Y$gle_trait_translucer$§!"
  gle_trait_translucer_lv2: "$gle_trait_pretitle$§Y$gle_trait_translucer$$gle_trait_experienced$§!"
  gle_trait_translucer_lv3: "$gle_trait_pretitle$§Y$gle_trait_translucer$$gle_trait_expert$§!"
  gle_trait_translucer_lv1_desc: "$gle_trait_lv3$$gle_trait_text$"
  gle_trait_translucer_lv2_desc: "$gle_trait_lv8$$gle_trait_text$"
  gle_trait_translucer_lv3_desc: "$gle_trait_text$"
- gle_trait_gas_refiner: "Переработчик газов"
+ gle_trait_gas_refiner: "Переработчик"
  gle_trait_gas_refiner_lv1: "$gle_trait_pretitle$§Y$gle_trait_gas_refiner$§!"
  gle_trait_gas_refiner_lv2: "$gle_trait_pretitle$§Y$gle_trait_gas_refiner$$gle_trait_experienced$§!"
  gle_trait_gas_refiner_lv3: "$gle_trait_pretitle$§Y$gle_trait_gas_refiner$$gle_trait_expert$§!"
@@ -243,8 +247,8 @@
  gle_trait_expert_gestalt: " (Максимизированный)"
  gle_trait_text_gestalt: "§G§HПротокол управления§! показывает какие £job£ §Yвиды деятельности§! губернатор может предоставить планетам, на которые он будет назначен."
 
- gle_trait_lv3_gestalt: "§HСтанет улучшенным на уровне навыка §Y3§!\n\n"
- gle_trait_lv8_gestalt: "§HСтанет максимизированным на уровне навыка §Y8§!\n\n"
+ gle_trait_lv3_gestalt: "§HСтанет улучшенным на §Y3§! уровне навыка\n\n"
+ gle_trait_lv8_gestalt: "§HСтанет максимизированным на §Y8§! уровне навыка\n\n"
 
 
  gle_trait_coordinator: "Координатор"
@@ -254,7 +258,7 @@
  gle_trait_coordinator_lv1_desc: "$gle_trait_lv3_gestalt$$gle_trait_text_gestalt$"
  gle_trait_coordinator_lv2_desc: "$gle_trait_lv8_gestalt$$gle_trait_text_gestalt$"
  gle_trait_coordinator_lv3_desc: "$gle_trait_text_gestalt$"
- gle_trait_synapse_drone: "Синапсический дрон"
+ gle_trait_synapse_drone: "Синаптический дрон"
  gle_trait_synapse_drone_lv1: "$gle_trait_pretitle_gestalt$§Y$gle_trait_synapse_drone$§!"
  gle_trait_synapse_drone_lv2: "$gle_trait_pretitle_gestalt$§Y$gle_trait_synapse_drone$$gle_trait_experienced_gestalt$§!"
  gle_trait_synapse_drone_lv3: "$gle_trait_pretitle_gestalt$§Y$gle_trait_synapse_drone$$gle_trait_expert_gestalt$§!"
@@ -282,7 +286,7 @@
  gle_trait_technician_drone_lv1_desc: "$gle_trait_lv3_gestalt$$gle_trait_text_gestalt$"
  gle_trait_technician_drone_lv2_desc: "$gle_trait_lv8_gestalt$$gle_trait_text_gestalt$"
  gle_trait_technician_drone_lv3_desc: "$gle_trait_text_gestalt$"
- gle_trait_agri_drone: "Сельскохозяйственный дрон"
+ gle_trait_agri_drone: "Аграрный дрон"
  gle_trait_agri_drone_lv1: "$gle_trait_pretitle_gestalt$§Y$gle_trait_agri_drone$§!"
  gle_trait_agri_drone_lv2: "$gle_trait_pretitle_gestalt$§Y$gle_trait_agri_drone$$gle_trait_experienced_gestalt$§!"
  gle_trait_agri_drone_lv3: "$gle_trait_pretitle_gestalt$§Y$gle_trait_agri_drone$$gle_trait_expert_gestalt$§!"
@@ -359,7 +363,7 @@
  gle_trait_chemist_drone_lv1_desc: "$gle_trait_lv3_gestalt$$gle_trait_text_gestalt$"
  gle_trait_chemist_drone_lv2_desc: "$gle_trait_lv8_gestalt$$gle_trait_text_gestalt$"
  gle_trait_chemist_drone_lv3_desc: "$gle_trait_text_gestalt$"
- gle_trait_translucer_drone: "Дрон-специалист по кристаллам"
+ gle_trait_translucer_drone: "Дрон-кристальщик"
  gle_trait_translucer_drone_lv1: "$gle_trait_pretitle_gestalt$§Y$gle_trait_translucer_drone$§!"
  gle_trait_translucer_drone_lv2: "$gle_trait_pretitle_gestalt$§Y$gle_trait_translucer_drone$$gle_trait_experienced_gestalt$§!"
  gle_trait_translucer_drone_lv3: "$gle_trait_pretitle_gestalt$§Y$gle_trait_translucer_drone$$gle_trait_expert_gestalt$§!"
@@ -375,11 +379,11 @@
  gle_trait_gas_refiner_drone_lv3_desc: "$gle_trait_text_gestalt$"
 
 
- gle_trait_ruler_tier_locked: "$gle_trait_secondtitle$§Pнедоступно§!"
+ gle_trait_ruler_tier_locked: "$gle_trait_secondtitle$ §Pне доступно§!"
  gle_trait_ruler_tier_locked_tooltip: "§RОткроется, когда лидер достигнет §Y5§!-го уровня навыка.§!"
- gle_trait_ruler_tier_locked_desc: "§GВ отличие от стратегии губернатора, дополнительная статегия в некоторой степени зависит от самого губернатора, призанков его вида и гражданских моделей.§!"
+ gle_trait_ruler_tier_locked_desc: "§GВ отличие от стратегии губернатора, дополнительная стратегия в некоторой степени зависит от самого губернатора, признаков его вида и гражданских моделей.§!"
 
- gle_trait_ruler_tier_locked_gestalt: "$gle_trait_secondtitle_gestalt$ §Pнедоступно§!"
+ gle_trait_ruler_tier_locked_gestalt: "$gle_trait_secondtitle_gestalt$ §Pне доступно§!"
  gle_trait_ruler_tier_locked_gestalt_tooltip: "$gle_trait_ruler_tier_locked_tooltip$"
  gle_trait_ruler_tier_locked_gestalt_desc: "§GВ отличие от протокола управления, дополнительный протокол в некоторой степени зависит от губернатора - от признаков самого лидера и его вида.§!"
 
@@ -502,17 +506,17 @@
  gle_trait_ruler_tier_duelist_desc: "$gle_trait_ruler_tier_locked_desc$"
 
 
- gle_trait_gray: "$gle_trait_secondtitle$§HHаниты§!"
+ gle_trait_gray: "$gle_trait_secondtitle$ §Hнаниты§!"
  gle_trait_gray_desc: "Серый является массивом нанитов и может за короткое время добиваться завершения планетарного строительства и прочих региональных проектов."
- gle_trait_gray_gestalt: "$gle_trait_secondtitle_gestalt$§HHаниты§!"
+ gle_trait_gray_gestalt: "$gle_trait_secondtitle_gestalt$ §Hнаниты§!"
  gle_trait_gray_gestalt_desc: "$gle_trait_gray_desc$"
 
- gle_trait_ruler_tier_locked_gray: "$gle_trait_pretitle$§Pнедоступно§!"
- gle_trait_ruler_tier_locked_gray_tooltip: "§HСвяжитесь с Серым, чтобы разблокировать стратегии§!"
+ gle_trait_ruler_tier_locked_gray: "$gle_trait_pretitle$ §Pне доступно§!"
+ gle_trait_ruler_tier_locked_gray_tooltip: "§HСвяжитесь с Серым, чтобы открыть стратегии§!"
  gle_trait_ruler_tier_locked_gray_desc: "$gle_trait_text$"
 
- gle_trait_ruler_tier_locked_gray_gestalt: "$gle_trait_pretitle_gestalt$§Pнедоступно§!"
- gle_trait_ruler_tier_locked_gray_gestalt_tooltip: "§HСвяжитесь с Серым, чтобы разблокировать протоколы§!"
+ gle_trait_ruler_tier_locked_gray_gestalt: "$gle_trait_pretitle_gestalt$ §Pне доступно§!"
+ gle_trait_ruler_tier_locked_gray_gestalt_tooltip: "§HСвяжитесь с Серым, чтобы открыть протоколы§!"
  gle_trait_ruler_tier_locked_gray_gestalt_desc: "$gle_trait_text_gestalt$"
 
  gle.1000.enter: "Давай поговорим о твоей работе, §H[event_target:gray_governor.GetName]§!."
@@ -548,7 +552,7 @@
  gle.1000.c: "Здоровая жизнь важна для нас."
  gle.1000.d: "Нам бы хотелось иметь побольше минералов."
  gle.1000.e: "Нам бы не помешало побольше энергии."
- gle.1000.f: "Зелени и еды мало не бывает."
+ gle.1000.f: "Зелени и пиши мало не бывает."
  gle.1000.g: "Можешь ли ты создать части себя для нас?"
  gle.1000.h: "Нашему народу не помешало бы повеселиться."
  gle.1000.h2: "К барьеру!"
@@ -590,7 +594,7 @@
  gle.1000.t.response: "$gle.1000.response$"
  gle.1000.u.response: "$gle.1000.response$"
 
- gle.1000.a_gestalt: "Расширь сеть."
+ gle.1000.a_gestalt: "Расширить сеть."
  gle.1000.b_gestalt: "Больше связей для дронов."
  gle.1000.c_gestalt: "$gle.1000.d$"
  gle.1000.d_gestalt: "$gle.1000.e$"
