--- a/ptp_rus/localisation/russian/gpm_dig_sites_l_russian.yml
+++ b/ptp_rus/localisation/russian/gpm_dig_sites_l_russian.yml
@@ -33,7 +33,7 @@
  gpm_dig_site.100.a:0 "Отлично."
 
  gpm_dig_site.110.name:0 "В поисках неизвестного"
- gpm_dig_site.110.desc:0 "Экспедиционная команда направилась обходным рутём к ближайшим руинам. Это, как мы надеемся, позволит избежать любых неожиданностей, которые могут подстерегать нас на главном пути. Пройдет ещё некоторое время, прежде чем учёные войдут в руины обходным путём."
+ gpm_dig_site.110.desc:0 "Экспедиционная команда направилась обходным путём к ближайшим руинам. Это, как мы надеемся, позволит избежать любых неожиданностей, которые могут подстерегать нас на главном пути. Пройдет ещё некоторое время, прежде чем учёные войдут в руины обходным путём."
  gpm_dig_site.110.a:0 "Ясно."
 
  gpm_dig_site.120.name:0 "Старые - это ещё мягко сказано"
@@ -68,9 +68,9 @@
 
  # orbital monitoring station
  gpm_dig_site.153.name:0 "Орбитальная станция наблюдения"
- gpm_dig_site.153.desc:0 "Стены каждой комнаты этого объекта покрыты мониторами, голоэкранами и глобусами для виртуализации. Судя по всему, это оборудование использовались для наблюдения за всем, что выходило на орбиту и покидало её. Миллиарды миниатюрных спутников, должно быть, изначально использовались для наблюдения буквально всем, что происходило на этой планете и вокруг неё. Однако, от тех спутников почти ничего не осталось... Но мы сможем восстановить часть данных из этого оборудования."
+ gpm_dig_site.153.desc:0 "Стены каждой комнаты этого объекта покрыты мониторами, голоэкранами и глобусами для виртуализации. Судя по всему, это оборудование использовались для наблюдения за всем, что выходило на орбиту и покидало её. Миллиарды миниатюрных спутников, должно быть, изначально использовались для наблюдения буквально за всем, что происходило на этой планете и вокруг неё. Однако, от них почти ничего не осталось... Но мы сможем восстановить часть данных из этого оборудования."
  gpm_dig_site.153.a:0 "Так много камер..."
- gpm_dig_site.153.MEGACORP:0 "Это будет легко продать на рынке"
+ gpm_dig_site.153.MEGACORP:0 "Мы с легкостью продадим эти данные на рынке"
 
  # bunker
  gpm_dig_site.154.name:0 "Старый бункер"
