--- a/ptp_rus/localisation/russian/gpm_relics_l_russian.yml
+++ b/ptp_rus/localisation/russian/gpm_relics_l_russian.yml
@@ -22,11 +22,11 @@
 
  gpm_r_machine_world_core:0 "Ядро машинного мира"
  gpm_r_machine_world_core_desc:0 "Бездействующее ядро машинного мира, ожидающее подзарядки."
- gpm_r_machine_world_core_active_tooltip:0 "Сверхзаряженное §HЯдро машинного мира§! позволит ассимилировать одиночный §Yбезжизненный мир§!, §Yгазовый гигант§! или §Yрасколотый мир§! в §Hмашинный мир§!\n\nРазблокирует планетарное решение §YАссимилировать мир§! для любой безжизненной планеты в наших границах.\n\n§RЭто действие удалит реликвию.§!\n"
+ gpm_r_machine_world_core_active_tooltip:0 "Сверхзаряженное §HЯдро мира машин§! позволит преобразовать §Yбезжизненный мир§!, §Yгазовый гигант§! или §Yрасколотый мир§! в §Hмир машин§!\n\nОткрывает планетарное решение §YПреобразовать мир§! для любой безжизненной планеты в наших границах.\n\n§RЭто действие удалит реликвию.§!\n"
 
- gpm_r_mars_rover:0 "Восстановленный «Оппортьюнити»"
- gpm_r_mars_rover_desc:0 "Оппортьюнити был полностью восстановлен и теперь счастливо снова колесит по Марсу."
- gpm_r_mars_rover_active_tooltip:0 "Подзарядка батарей «Оппортьюнити» стоит £energy£ 10 (Это ничего не делает)."
+ gpm_r_mars_rover:0 "Восстановленный «Opportunity»"
+ gpm_r_mars_rover_desc:0 "«Opportunity» был полностью восстановлен и счастливо вновь колесит по Марсу."
+ gpm_r_mars_rover_active_tooltip:0 "Подзарядка батарей «Opportunity» стоит £energy£ 10 (Это ничего не даст)."
 
  #######################################
  #### Precursor Relics
@@ -84,7 +84,7 @@
 
  gpm_r_venerable_dreadnaught:0 "Древний дредноут"
  gpm_r_venerable_dreadnaught_desc:0 "Древняя боевая машина, способная повернуть ход любой битвы вспять."
- gpm_r_venerable_dreadnaught_passive_effect_tooltip:0 "Разблокирует: §Hармию дредноутов§!"
+ gpm_r_venerable_dreadnaught_passive_effect_tooltip:0 "Открывает: §Hармию дредноутов§!"
  gpm_r_venerable_dreadnaught_active_effect_tooltip:0 "Добавит одну армию §Hдревних дредноутов§!. Содержание армии стоит £energy£10 £alloys£5."
 
  gpm_r_sentinel_queen:0 "Королева-Страж"
@@ -99,7 +99,7 @@
 
  gpm_r_datacube:0 "Датакуб"
  gpm_r_datacube_desc:0 "Этот куб светится жутковатым светом. При прикосновении он раскрывается, открывая взорам ещё более странный предмет. Когда его спрашивают, датакуб иногда раскрывает некоторые из своих секретов."
- gpm_r_datacube_active_effect_tooltip:0 "Добавит 5 полностью случайных технологий в доступные для исследования с прогрессом 50%"
+ gpm_r_datacube_active_effect_tooltip:0 "Добавит 5 случайных технологий для исследования с прогрессом 50%"
 
  gpm_r_self_assembly_hub:0 "Самособирающийся хаб"
  gpm_r_self_assembly_hub_desc:0 "Этот автономный хаб способен воспроизводить части своих строительных усиков, что позволяет ему практически самостоятельно заниматься строительством в любом масштабе."
