--- a/ptp_rus/localisation/starbase_extended_2.0_l_russian.yml
+++ b/ptp_rus/localisation/starbase_extended_2.0_l_russian.yml
@@ -5,10 +5,9 @@
  starbase_headquarters: "Центральный штаб"
  starbase_headquarters_plural: "Звёздная база центрального штаба"
 
- mod_station_researchers_physics_research_produces_mult: "Производство очков исследований £physics  физики"
- mod_station_researchers_society_research_produces_mult: "Производство очков исследований £society  социологии"
- mod_station_researchers_engineering_research_produces_mult: "Производство очков исследований £engineering  инженерии"
-
+ starbase_extended_upgrade_test: "Starbase Extended - Тест обновлений"
+ starbase_extended_upgrade_test_desc: "Пользовательский модификатор только для моддинга, чтобы проверить, может ли ИИ обновить звездную базу или нет."
+ 
  sm_shield_module: "Генератор щита"
  sm_shield_module_desc: "Добавляет больше щитов на звёздную базу."
 
@@ -34,34 +33,34 @@
  sm_adv_space_engineers_desc: "Привлекает опытных космических инженеров, помогающих строить больше зданий и модулей на звездной базе с большей скоростью."
 
  sm_asteroid_mining: "Команды по добыче астероидов"
- sm_asteroid_mining_desc: "Запустите команду шахтеров, чтобы добывать небольшие астероиды, присутствующие в системе, которые слишком малы, чтобы строить станцию. §GЭксперты по добыче астероидов§! улучшат выработку на §Y2§!  £minerals минерала."
+ sm_asteroid_mining_desc: "Запустите команду шахтеров, чтобы добывать небольшие астероиды, присутствующие в системе, которые слишком малы, чтобы строить станцию. §GЭксперты по добыче астероидов§! улучшат выработку на §Y2§! £minerals минерала."
 
  sm_mining_experts: "Эксперты по добыче астероидов"
- sm_mining_experts_desc: "Привлекайте экспертов, помогающих в добыче астероидов, улучшая производительность каждой команды по добыче астероидов. Улучшит выработку каждой §Gкоманды по добыче астероидов§! на §Y2§!  £minerals минерала."
+ sm_mining_experts_desc: "Привлекайте экспертов, помогающих в добыче астероидов, улучшая производительность каждой команды по добыче астероидов. Улучшит выработку каждой §Gкоманды по добыче астероидов§! на §Y2§! £minerals минерала."
 
- sm_reinforced_defenses: "Усиленная защита звездной базы"
+ sm_reinforced_defenses: "Усиленная защита звёздной базы"
  sm_reinforced_defenses_desc: "Улучшает щиты и броню звёздной базы."
 
- sm_strategic_defenses: "Стратегическая защита звездной базы"
+ sm_strategic_defenses: "Стратегическая защита звёздной базы"
  sm_strategic_defenses_desc: "Улучшает щиты и оружие звёздной базы."
 
- sm_adv_starbase: "Продвинутая защита звездной базы"
+ sm_adv_starbase: "Продвинутая защита звёздной базы"
  sm_adv_starbase_desc: "Улучшает броню и оружие звёздной базы."
 
  sm_orbital_lab: "Орбитальная исследовательская лаборатория"
- sm_orbital_lab_desc: "Исследовательская лаборатория на орбите. Присутствие §GЛаборатории поддержки§! улучшит результаты исследований."
+ sm_orbital_lab_desc: "Исследовательская лаборатория на орбите. Присутствие §Gлаборатории поддержки§! улучшит результаты исследований."
 
  sm_energy_collector: "Коллектор энергии"
  sm_energy_collector_desc: "Специальный модуль сбора энергии от звезды."
 
  sm_orbital_physics_support_lab: "Лаборатория изучения физики"
- sm_orbital_physics_support_lab_desc: "Лаборатория, улучшающая исследования в области физики. Будет улучшать производительность каждой §GОрбитальной исследовательской лаборатории§! на §Y2 очка физических исследований§!."
+ sm_orbital_physics_support_lab_desc: "Лаборатория, улучшающая исследования в области физики. Будет улучшать производительность каждой §Gорбитальной исследовательской лаборатории§! на §Y2 очка физических исследований§!."
 
  sm_orbital_society_support_lab: "Лаборатория изучения социологии"
- sm_orbital_society_support_lab_desc: "Лаборатория, улучшающая исследования в области социологии. Будет улучшать производительность каждой §GОрбитальной исследовательской лаборатории§! на §Y2 очка социологических исследований§!."
+ sm_orbital_society_support_lab_desc: "Лаборатория, улучшающая исследования в области социологии. Будет улучшать производительность каждой §Gорбитальной исследовательской лаборатории§! на §Y2 очка социологических исследований§!."
 
  sm_orbital_engineering_support_lab: "Лаборатория изучения инженерии"
- sm_orbital_engineering_support_lab_desc: "Лаборатория, улучшающая исследования в области инженерии. Будет улучшать производительность каждой §GОрбитальной исследовательской лаборатории§! на §Y2 очка инженерных исследований§!."
+ sm_orbital_engineering_support_lab_desc: "Лаборатория, улучшающая исследования в области инженерии. Будет улучшать производительность каждой §Gорбитальной исследовательской лаборатории§! на §Y2 очка инженерных исследований§!."
 
  sm_navy_expert_sector: "Сектор экспертов флота"
  sm_navy_expert_sector_desc: "Строят корабли, платформы и модули с меньшими затратами."
@@ -88,10 +87,10 @@
  sm_tile_blocker_cleaner_desc: "Батальон инженеров-строителей, специализирующихся на устранении препятствий на планетных поверхностях."
 
  sm_space_foundry: "Космический литейный завод"
- sm_space_foundry_desc: "Космический литейный завод будет перерабатывать минералы в сплавы. §GЦепное производство§! увеличивает выработку на §Y1§!  £alloys."
+ sm_space_foundry_desc: "Космический литейный завод будет перерабатывать минералы в сплавы. §GЦепное производство§! увеличит выработку  £alloys на §Y1§!."
 
  sm_space_factory: "Космическая фабрика"
- sm_space_factory_desc: "Космическая фабрика будет перерабатывать минералы в потребительские товары. §GЦепное производство§! увеличивает выработку на §Y2§!  £consumer_goods."
+ sm_space_factory_desc: "Космическая фабрика будет перерабатывать минералы в потребительские товары. §GЦепное производство§! увеличит выработку £consumer_goods на §Y2§!."
 
  sm_security_branch_office: "Отделение безопасности"
  sm_security_branch_office_desc: "Отделение безопасности сосредоточится на защите ваших торговых путей от местного пиратства."
@@ -99,20 +98,20 @@
  sm_administration_office: "Административный офис"
  sm_administration_office_desc: "Административный офис - это специальное здание звёздной базы, которое имеет возможность увеличить административный потенциал империи."
 
- sm_synthetic_crystal_fabricator: "Производитель синтетических кристаллов"
+ sm_synthetic_crystal_fabricator: "Переработчик синтетических кристаллов"
  sm_synthetic_crystal_fabricator_desc: "Превращает минералы в редкие кристаллы благодаря особым условиям в космосе."
 
- sm_synthetic_volatile_motes_fabricator: "Фабрикатор синтетических летучих пылинок"
+ sm_synthetic_volatile_motes_fabricator: "Переработчик синтетических летучих пылинок"
  sm_synthetic_volatile_motes_fabricator_desc: "Превращает минералы в летучие пылинки благодаря особым условиям в космосе."
 
- sm_synthetic_gase_fabricator: "Фабрикатор синтетических газов"
+ sm_synthetic_gase_fabricator: "Переработчик синтетических газов"
  sm_synthetic_gase_fabricator_desc: "Превращает минералы в экзотические газы благодаря особым условиям в космосе."
 
  sm_orbital_assembly: "Орбитальный сборочный цех"
  sm_orbital_assembly_desc: "Строит поселения роботов на звёздной базе и переносит их в колонии системы."
 
  sm_chain_manufacturing: "Цепное производство"
- sm_chain_manufacturing_desc: "Помогает в производстве сплавов и товаров народного потребления как в космосе, так и на планете. Улучшит производительность каждого §GКосмического литейного заводо§! на §Y1§!  £alloys и §GКосмической фабрики§! на §Y2§!  £consumer_goods."
+ sm_chain_manufacturing_desc: "Помогает в производстве сплавов и ТМС, как в космосе, так и на планете. Улучшит производительность каждого §Gкосмического литейного завода§! на §Y1§! £alloys и §Gкосмической фабрики§! на §Y2§! £consumer_goods."
 
  sm_construction_planificator: "Системный инженерный офис"
  sm_construction_planificator_desc: "Команда инженеров, специализирующаяся на создании сложных чертежей и планов, ускоряющих строительство зданий, районов и проектов на планетах системы."
@@ -121,16 +120,16 @@
  sm_financial_space_center_desc: "Крупный финансовый банк, помогающий улучшить торговлю внутри системы."
 
  sm_terraforming_module: "Сектор терраформинга"
- sm_terraforming_module_desc: "Пошлите команды терраформеров, чтобы улчшить условия жизни в местных колониях, присутствующих в системе."
+ sm_terraforming_module_desc: "Пошлите команды терраформеров, чтобы улучшить условия жизни в местных колониях, присутствующих в системе."
 
  sm_stasis_chambers: "Стазис-камеры"
  sm_stasis_chambers_desc: "Увеличивает рост населения, присутствующего в системе."
 
  sm_emergency_portal: "Навигационные протоколы"
- sm_emergency_portal_desc: "Чрезвычайно продвинутая система навигации, которая может быстро вычислить координаты для аварийных прыжков. Увеличивает шанс кораблей успешно выйти из боя."
+ sm_emergency_portal_desc: "Чрезвычайно продвинутая система навигации, которая может быстро вычислить координаты для аварийных прыжков. Увеличит шанс кораблей успешно выйти из боя."
 
  sm_starbase_optimal_systems: "ИИ звёздной базы"
- sm_starbase_optimal_systems_desc: "Чрезвычайно продвинутый компьютер с искусственным интеллектом, способный улучшить способности звездной базы к атаке, защите и торговой защите."
+ sm_starbase_optimal_systems_desc: "Чрезвычайно продвинутый компьютер с искусственным интеллектом, способный улучшить способности звёздной базы к атаке, защите и торговой защите."
 
  sm_market_computers: "ТВ студия"
  sm_market_computers_desc: "Телестудия, которая производит развлекательные программы для граждан по всей системе, увеличивая блага в системе."
@@ -169,9 +168,9 @@
  sm_crew_formation_modules_desc:"Специальный отсек звёздной базы, посвященный глубокому формированию экипажа базы, чтобы улучшить обслуживание других звёздных баз."
 
  tech_starbase_6: "Цитадель"
- tech_starbase_6_desc: "Цитадель - мощная и высокотехнологичная защитная станция системы."
+ tech_starbase_6_desc: "Цитадель - мощная и высокотехнологичная станция обороны системы."
  TECH_UNLOCK_STRONGHOLD_CONSTRUCTION_TITLE: "§HУлучшение космической базы:§! Цитадель"
- TECH_UNLOCK_STRONGHOLD_CONSTRUCTION_DESC: "§HЦитадель§!\nМощная и высокотехнологичная защитная станция системы."
+ TECH_UNLOCK_STRONGHOLD_CONSTRUCTION_DESC: "§HЦитадель§!\nМощная и высокотехнологичная станция обороны системы."
 
  tech_starbase_7: "Звёздная база центрального штаба"
  tech_starbase_7_desc: "Последнее улучшение звёздной базы, центральный штаб является ультимативной станцией командования и обороны."
