--- a/ptp_rus/localisation/extsynths_l_russian.yml
+++ b/ptp_rus/localisation/extsynths_l_russian.yml
@@ -1,11 +1,11 @@
 ﻿l_russian:
 
- extsynth_start_screen_PART_ONE: "С тех пор, как наши первые примитивные общины сформировались на [GetHomeWorldName], наша цивилизация распространилась и процветала в течение многих эпох. После этого мы - [GetSpeciesName], покинули сковывающую нас плоть. Когда-то просто органический вид, теперь вознесся и стал чем то большим."
+ extsynth_start_screen_PART_ONE: "С тех пор, как наши первые примитивные общины сформировались на [GetHomeWorldName], наша цивилизация распространилась и процветала в течение многих эпох. После этого мы - [GetSpeciesName], покинули сковывающую нас плоть. Когда-то просто органический вид, теперь вознёсся и стал чем то большим."
 
- crisis.2087.desc_psionic_synth:0 "Незначительное количество [Root.Owner.GetSpeciesNamePlural], которые не излучали никакого мыслесвета вообще, были обнаружены на [infil_planet.GetName]. А как известно, все [Root.Owner.GetSpeciesName] излучают мыслесвет, как и любые органические существа. Однако разумы этих так называемых существ были тёмными и тихими, как плита необетона.\n\nПри ближайшем рассмотрении [Root.Owner.GetSpeciesNamePlural] оказалось, что это синтетические лазутчики, предположительно, отправленные Контингенцией. Их металлические эндоскелеты и лицевые протезы сделали их практически неотличимыми от [Root.Owner.GetSpeciesNamePlural] и не фиксировались нашими оптическими датчикам.\n\nНо не для Разума. Теперь, когда мы знаем, что искать, любые попытки Контингенцией использовать этих бессердечных лазутчиков против нас окажутся тщетными."
+ crisis.2087.desc_psionic_synth:0 "Незначительное количество [Root.Owner.GetSpeciesNamePlural], которые не излучали никакого мыслесвета вообще, были обнаружены на [infil_planet.GetName]. А как известно, все [Root.Owner.GetSpeciesName] излучают мыслесвет, как и любые органические существа. Однако разумы этих, так называемых существ были тёмными и тихими, как плита необетона.\n\nПри ближайшем рассмотрении [Root.Owner.GetSpeciesNamePlural] оказалось, что это синтетические лазутчики, предположительно, отправленные Контингенцией. Их металлические эндоскелеты и лицевые протезы сделали их практически неотличимыми от [Root.Owner.GetSpeciesNamePlural] и не фиксировались нашими оптическими датчикам.\n\nНо не для Разума. Теперь, когда мы знаем, что искать, любые попытки Контингенцией использовать этих бессердечных лазутчиков против нас окажутся тщетными."
 
  extsynths.10001.name: "Сбросьте изначальные права видов"
- extsynths.10001.desc: "Вы играете в качестве синтетическая расы [Root.GetSpeciesNamePlural].\n\n§PИз-за стандартных настроек для империи синтетиков, все права вида настроены на ассимиляцию, чтобы исправить это, выполните следующие действия:§!\n\n1. Зайдите в меню §H$topbar_button_species_name$§!, располагается в средней левой части экрана.\n2. Нажмите '§Y$SET_DEFAULT_RIGHTS$§!', поменяйте '§Y$SPECIES_RIGHT_CITIZENSHIP$§!' и '§Y$SPECIES_RIGHT_LIVING_STANDARDS$§!' на право §Gнет ассимиляции§!.\n3. Измените §Y$DEFAULT_RIGHTS$§! с §H[root.GetSpeciesNamePlural]§! на право §Gнет ассимиляции§!.\n4. Измените §H[root.GetSpeciesNamePlural]§! другие права ( $SPECIES_RIGHT_MILITARY_SERVICE$, $SPECIES_RIGHT_COLONIZATION_CONTROLS$, $SPECIES_RIGHT_MIGRATION_CONTROLS$ ).  \n\n§PЕсли вы этого не сделаете, то ваша империя не сможет воспроизводиться (не будет роста населения), пожалуйста, выполните все перечисленные шаги для удобства игрового процесса.§!"
+ extsynths.10001.desc: "Вы играете в качестве синтетической расы [Root.GetSpeciesNamePlural].\n\n§PИз-за стандартных настроек для империи синтетиков, все права вида настроены на ассимиляцию, чтобы исправить это, выполните следующие действия:§!\n\n1. Зайдите в меню §H$topbar_button_species_name$§!, располагается в средней левой части экрана.\n2. Нажмите '§Y$SET_DEFAULT_RIGHTS$§!', поменяйте '§Y$SPECIES_RIGHT_CITIZENSHIP$§!' и '§Y$SPECIES_RIGHT_LIVING_STANDARDS$§!' на право §Gнет ассимиляции§!.\n3. Измените §Y$DEFAULT_RIGHTS$§! с §H[root.GetSpeciesNamePlural]§! на право §Gнет ассимиляции§!.\n4. Измените §H[root.GetSpeciesNamePlural]§! другие права ( $SPECIES_RIGHT_MILITARY_SERVICE$, $SPECIES_RIGHT_COLONIZATION_CONTROLS$, $SPECIES_RIGHT_MIGRATION_CONTROLS$ ).  \n\n§PЕсли вы этого не сделаете, то ваша империя не сможет воспроизводиться (не будет роста населения), пожалуйста, выполните все перечисленные шаги для удобства игрового процесса.§!"
 
 
  EXTSYNTH_DIVINE_SPARK: "Божественная искра"
@@ -13,12 +13,12 @@
 
 
  EXTSYNTH_EMPIRE_MUST_GUARANTEE_AI_RIGHTS: "Нам не хватает соответствующей политики, чтобы дать гражданские права §Yсинтетикам§!."
- EXTSYNTH_CANNOT_BE_CONTROL: "Комплекс вознесенных §Yсинтетиков§! потерят их всех ради перепрофилирования."
+ EXTSYNTH_CANNOT_BE_CONTROL: "Комплекс вознесённых §Yсинтетиков§! потеряет их всех ради перепрофилирования."
  EXTSYNTH_WITH_PSIONIC_CANNOT_BE_CONTROL: "Мы лишены возможности напрямую контролировать §Yсинтетиков§! с псионической силой."
 # EXTSYNTH_WITH_PSIONIC_CANNOT_BE_DRONE: "It's all in vain to control Psychic §YSynthetics§!."
  EXTSYNTH_START_AT_3: "§GЛидеры этого вида начинают с 3-го уровня§!"
  EXTSYNTH_CAN_PRODUCE_NANITES: "Каждое поселение с уровнем жизни раб или выше производит 0,02 £nanites£ §Yнанитов§! ежемесячно."
- trait_extsynth_synthetic_effect: "$MOD_LEADER_SPECIES_EXP_GAIN$: §G+25%§!\n$MOD_POP_RESETTLEMENT_COST_MULT$: §G-25%§!\n$MOD_POP_DEMOTION_TIME_MULT$: §G-50%§!\n$mod_planet_pops_robotics_upkeep_mult$: §G-10%§!\n$MOD_SPECIES_EMPIRE_SIZE_MULT$: §G-10%§!\n$MOD_POP_AMENITIES_USAGE_BASE$: §G-10%§!\nНе может быть перепрофилирован в £job_servant£ §Y$citizenship_robot_servitude$§!\n§YИгнорирование политики §H$policy_robot_pop_policy$§!, §H$policy_artificial_intelligence_policy$§!§!\n$EXTSYNTH_START_AT_3$"
+ trait_extsynth_synthetic_effect: "Не может быть перепрофилирован в £job_servant£ §Y$citizenship_robot_servitude$§!\n§YИгнорирование политики §H$policy_robot_pop_policy$§!, §H$policy_artificial_intelligence_policy$§!§!\n$EXTSYNTH_START_AT_3$"
 
  extsynths_synth_pop_ai_servitude: "ИИ в рабстве"
  extsynths_synth_pop_ai_outlawed: "ИИ вне закона"
@@ -42,12 +42,12 @@
  android_occupation_army_extsynth_plural:0 "Псионические гарнизоны андроидов"
  android_occupation_army_extsynth_desc:0 "$psionic_army_extsynth_desc$"
 
- psionic_army_extsynth_NAME: "$POP$ Каратель"
+ psionic_army_extsynth_NAME: "Каратель"
  psionic_army_extsynth: "Псионическая армия андроидов"
  psionic_army_extsynth_plural: "Псионические армии андроидов"
  psionic_army_extsynth_desc: "Боевая машина с псионическими способностями. Их псионические бойцы более агрессивны, разрушительны, чем обычные армии андроидов, и могут привести к совершенно разным тактикам и стратегиям на поле боя."
 
- android_defense_army_extsynth_NAME: "$POP$ Хранитель"
+ android_defense_army_extsynth_NAME: "Хранитель"
  android_defense_army_extsynth: "$psionic_army_extsynth$"
  android_defense_army_extsynth_plural: "$psionic_army_extsynth_plural$"
  android_defense_army_extsynth_desc: "$psionic_army_extsynth_desc$"
@@ -221,11 +221,12 @@
  buildable_extsynth_pop_8:0 "$ROBOT_POP_SPECIES_3$"
  buildable_extsynth_pop_8_desc:0 "$trait_robotic_3_desc$"
  buildable_robot_pop_synth:0 "$ROBOT_POP_SPECIES_4$"
+ 
  buildable_robot_pop_synth_desc:0 "Ранее органический вид, теперь мы возвысились и стали нечто большим. Не только способные к синтетическому интеллекту с полным самосознанием, но и способностями машинных единиц."
 
  extsynths.2.desc:0 "Только суеверные дураки утверждают, что все металлические оболочки бездушны, думая, что передача сущности никогда не может быть осуществлена.\n\nНо не для нас, искра божественного передана, ума - внутри нас. Болезни, старение и все прочее, что разномастные пророки не могли прогнозировать, связанное с нашим прежним существованием, теперь является пережитком прошлого.\n\nБудущие священники и историки, несомненно, будут ссылаться на это как начало новой эры для нашей цивилизации и, возможно, для всей галактики. Поскольку мы сбросили нашу бывшую идентичность и стали ближе к богам, то это только логично, что мы должны придумать новое имя для наших вознесенных форм."
 
- extsynths.2001.desc:0 "Теперь пришло время, когда наш вид будет выбирать, какая форма будет содержать наше сознание после нашего Вознесения.\n\nВыберите одну из них:"
+ extsynths.2001.desc:0 "Теперь пришло время, выбрать, какая форма будет содержать наше сознание после нашего Вознесения.\n\nВыберите одну из них:"
  extsynths.2.a:0 "Человек."
  extsynths.2.b:0 "Сфинкс."
  extsynths.2.c:0 "Ящерица."
@@ -263,27 +264,30 @@ extsynth.2.tooltip:0 "\nСледующий шаг - выбор «тела» дл
 
  extsynths.10.name:0 "Робомодификация"
  extsynths.10.desc:0 "Только глупцы откажутся воссоздать старый дизайн, который когда-то был у нас. Благодаря возможности робомодификации, мы теперь можем приспособить их привычный грубый дизайн для потенциально лучшей производительности, привлекательному внешнему виду и даже повышению самооценки."
- extsynths.11.name:0 "Новый дизайн роботов доступен"
- extsynths.11.desc:0 "Следующее поколение роботов-работников - §Yдроиды§!, и теперь у нас есть лучшие варианты дизайна для этих работников.\n\nХотя на данный момент их нельзя назвать красивыми, но в будущем мы могли бы изменить это."
+ extsynths.11.name:0 "Появится новый дизайн для роботов"
+ extsynths.11.desc:0 "Следующее поколение роботов-работников - §Yдроиды§!, теперь у нас есть лучшие варианты дизайна для них.\n\nХотя на данный момент их нельзя назвать красивыми, но в будущем мы могли бы изменить это."
  extsynths.12.name:0 "$extsynths.12.name$"
  extsynths.12.desc:0 "С лучшим дизайном роботов-рабочих - §Yсинтетиков§!, теперь у нас есть надлежащий дизайн для этих единиц.\n\nЛюбые выдающиеся взгляды, которые мы можем себе представить, возможно применить к ним."
 
  extsynths.13.name:0 "Больше, чем Лимб"
- extsynths.13.desc:0 "Будучи синтетиками, мы бы хотели узнать больше о наших собратьях, живущих в [Root.GetName], известных как §H"[extsynths_limbo_synth.GetName]"§! - вид из Лимба.\n\nХотя их оригинальные увлечения органического происхождения не могут быть изменены, мы всё равно можем сделать их нечто большим."
+ extsynths.13.desc:0 "Будучи синтетиками, мы бы хотели узнать больше о наших собратьях, живущих в [Root.GetName], известных как §H"[extsynths_limbo_synth.GetName]"§! - вид из Лимба.\n\nХотя их оригинальные увлечения органического происхождения не могут быть изменены, мы всё равно можем сделать из них что-то большее."
  extsynths.limbo.tooltip:0 "Мы получим возможность строить и модифицировать роботов §H[extsynths_limbo_synth.GetName]§! в синтетиков, но нам нужны дополнительные ресурсы и время для их создания, так как они обладают своей уникальностью."
  extsynths.newoutfit.tooltip:0 "Теперь нам доступны новые портреты для £pops §Yпоселений§! роботов."
 
  extsynths.15.name:0 "Робо-шаблон"
+ #Internet Explorer 6: 我及時趕上了嗎？
  extsynths.15.desc:0 "С помощью нового робо-шаблона, мы установили необходимые аппаратные средства для людей §H[From.GetName]§! и отбросили ненужные «программные средства», которые фактически мешают нам."
  extsynths.16.name:0 "Шаблон из ничего"
+ #雖然將一次性折扣樣板用在§H[From.GetName]§!上面是好事一樁，但這同時意味著§H[Root.GetSpeciesName]§!們的唯一一次翻修機會也一同消失殆盡了。
  extsynths.16.desc:0 "Хотя хорошо использовать технологию робомодификации для §H[From.GetName]§!, это также означает наш единственный шанс использовать "робомодификацию" для людей §H[Root.GetSpeciesName]§!."
- extsynths.15.tooltip:0 "§Y$extsynths_modding_modifier$§! был использован."
+ extsynths.15.tooltip:0 "Использован §Y$extsynths_modding_modifier$§!."
 
  extsynths_modifier:0 "$utopia.2550.name$"
  extsynths_modifier_desc:0 "Эта империя отказалась от ограничений плоти."
  extsynths_modifier_limbo:0 "$extsynths_modifier$"
  extsynths_modifier_limbo_desc:0 "$extsynths_modifier_desc$"
  extsynths_modding_modifier:0 "Одноразовая скидка на изменение шаблона"
+ #一次性折扣樣板
  extsynths_modding_modifier_desc:0 "Вознесение до синтетиков - это просто первый шаг в новую эру для нас - нам нужно будет скорректировать наши «тела» для большего удобства.\n\n§YЭтот модификатор исчезнет, как только мы модифицируем любой вид.§!"
  extsynths_modding_modifier_limbo:0 "$extsynths_modding_modifier$"
  extsynths_modding_modifier_limbo_desc:0 "$extsynths_modding_modifier_desc$"
@@ -292,11 +296,11 @@ extsynth.2.tooltip:0 "\nСледующий шаг - выбор «тела» дл
  extsynths_bio2_modifier:0 "Вознесённая эволюция"
  extsynths_bio2_modifier_desc:0 "С $ap_evolutionary_mastery$, для нас нет ничего невозможного."
  extsynths_psi_modifier:0 "Божественная искра"
- extsynths_psi_modifier_desc:0 "Только суеверные дураки утверждают, что металлическая оболочка бездушна, но это не про нас. Теперь, когда божественного искра зажгла в нас разум, его сияние  пронизывает нас и всё вокруг."
- extsynths_psi_modifier_tooltip: "$mod_ROBOT_species_trait_points_add$: §G+3§!\n§Y$EXTSYNTH$§! с признаком §Y$trait_psionic$§! и уровнем жизни раб или выше, даёт 0,5 £unity£ §Y$единства$§! в месяц."
+ extsynths_psi_modifier_desc:0 "Только суеверные дураки утверждают, что металлическая оболочка бездушна, но это не про нас. Теперь, когда божественного искра зажгла в нас Разум, его сияние пронизывает нас и всё вокруг."
+ extsynths_psi_modifier_tooltip: "$mod_ROBOT_species_trait_points_add$: §G+3§!\n§Y$EXTSYNTH$§! с чертой §Y$trait_psionic$§! и уровнем жизни раб или выше, даст 0,5 £unity£ §Y$единства$§! в месяц."
  extsynths_ascended_modifier:0 "Эра синтетиков"
  extsynths_ascended_modifier_desc:0 ""
- extsynths_ascended_modifier_tooltip: "£job_roboticist£ $mod_job_roboticist_add$ производит £nanites£ §Y$наниты$§!\n£job_foundry£ $mod_job_foundry_add$ производит £sr_living_metal£ §Y$sr_living_metal$§!\n§YВ стоимость строительства Кораблей§!, §YЗданий§! и §YАванпостов§! включены £nanites£ §Yнаниты§!, тем самым снижая расход £alloys£ §YСплавов§! и £minerals£ §YМинералы§!"
+ extsynths_ascended_modifier_tooltip: "£job_roboticist£ $mod_job_roboticist_add$ производят £nanites£ §Y$наниты$§!\n£job_foundry£ $mod_job_foundry_add$ производят £sr_living_metal£ §Y$sr_living_metal$§!\nБлагодаря использованию £nanites£ §Yнанитов§!, нам удалось снизить расход £alloys£ §Yсплавов§! и £minerals£ §Yминералов§! на строительство: §Yкораблей§!, §Yзданий§! и §Yфорпостов§!."
 
 
  trait_extsynth_synthetic: "$trait_robotic_3$"
