--- a/ptp_rus/localisation/russian/fatalf_options_l_russian.yml
+++ b/ptp_rus/localisation/russian/fatalf_options_l_russian.yml
@@ -1,24 +1,5 @@
 ﻿l_russian:
- fatalf_anomaly.001.a: "Эти машины могут быть важны, попробуйте разоружить их."
- fatalf_anomaly.001.b: "Это слишком опасно, убирайтесь оттуда сейчас же!"
- fatalf_anomaly.002.a: "Отлично, давайте изучим эти машины."
- fatalf_anomaly.003.a: "Они старались изо всех сил."
- fatalf_anomaly.004.a: "Это не стоило риска."
- fatalf_anomaly.005.a: "Будьте аккуратны, но исследуйте это."
- fatalf_anomaly.005.b: "Давайте уйдем отсюда, гигантские инопланетные монстры - не шутка!"
- fatalf_anomaly.006.a: "Это может быть полезно."
- fatalf_anomaly.007.a: "Трагическая потеря."
- fatalf_anomaly.008.a: "Превосходная работа."
- fatalf_anomaly.009.a: "В чем может быть смысл?"
- fatalf_anomaly.010.a: "Что могло вызвать это?"
- fatalf_anomaly.011.a: "Попробуйте включить."
- fatalf_anomaly.011.b: "Оставьте работающим как есть."
- fatalf_anomaly.012.a: "Новая червоточина, ведущая через галактику!"
- fatalf_anomaly.013.a: "Настоящий позор."
- fatalf_anomaly.014.a: "Чистое совпадение, верно?"
- fatalf_anomaly.015.a: "Как они не были уничтожены?"
- fatalf_anomaly.101.a: "Мы должны отправить кого-то для исследования."
- fatalf_anomaly.101.b: "Это вряд ли будет полезным."
+ dmm_mod_fatalf: "$edict_fatalf_manager$"
  fatalf.003.a: "Они вкусные!"
  fatalf.004.a: "Откуда это?"
  fatalf.005.a: "Добудьте отсюда все минералы."
@@ -38,9 +19,9 @@
  fatalf.022.a: "Отправить корабль для исследования."
  fatalf.0301.a: "Это не может закончиться хорошо..."
  fatalf.0302.a: "Мы должны остановить их!"
- fatalf.0303.a: "Мы не будем захвачены!"
- fatalf.0304.a: "Мы должны уничтожить их до последнего!"
- fatalf.054.a: "Мы должны решить это."
+ fatalf.0303.a: "Нас не захватить!"
+ fatalf.0304.a: "Мы должны истребить их всех!"
+ fatalf.054.a: "Мы должны это решить."
  fatalf.057.a: "Включите машину на полную мощность."
  fatalf.057.b: "Оставьте машину как есть и изучите её эффекты."
  fatalf.057.c: "Разберите машину. Нельзя допустить, чтобы это продолжилось."
@@ -50,14 +31,14 @@
  fatalf.061.b: "Это неразумно."
  fatalf.064.a: "Мы сделали правильный выбор."
  fatalf.071.a: "Как вы сюда попали?"
- fatalf.071.b: "Для ваших людей будет здесь место."
+ fatalf.071.b: "Для ваших людей здесь будет самое место."
  fatalf.071.b.tip: "Члены [lost_country.GetName] поселятся в вашей столице."
  fatalf.071.c: "Мы можем предоставить материалы для вашей колонии."
  fatalf.071.d: "Вы - не наша забота. Делайте что хотите."
  fatalf.071.d.tip: "[lost_country.GetName] уйдут самостоятельно."
  fatalf.071.e: "Вам нет места в этой галактике."
- fatalf.071.e.tip:  "Откройте огонь по их кораблям!"
- fatalf.072.a: "$faction.503.a$"
+ fatalf.071.e.tip: "Откройте огонь по их кораблям!"
+ fatalf.072.a: "Отлично."
  fatalf.073.a: "Это было правильное решение."
  fatalf.074.a: "Довольно странно."
  fatalf.075.a: "Мы можем найти способ открыть его."
@@ -69,7 +50,7 @@
  fatalf.151.a: "Мы можем использовать это."
  fatalf.151.b: "Это беспокоит."
  fatalf.161.a: "Довольно тревожно."
- fatalf.162.a: "Кто мог это делать?"
+ fatalf.162.a: "Кто мог это сделать?"
  fatalf.171.a: "Что бы это могло быть?"
  fatalf.171.b: "Подготовьте оборону!"
  fatalf.177.a: "Страшный позор, но, возможно, это была не потеря."
@@ -77,7 +58,7 @@
  fatalf.259.b: "Переместите всю новую информацию в журнал."
  fatalf.259.b.tip: "Новые предупреждения о временном гиперкоридоре не будут отображаться."
  fatalf.400.accept: "Давайте договоримся."
- fatalf.400.decline: "Будет лучше, если нет."
+ fatalf.400.decline: "Будет лучше, но нет."
  fatalf.411.accept: "Ладно, если вы предлагаете."
  fatalf.900.a: "§RВысокая нестабильность§!"
  fatalf.900.b: "§YСредняя нестабильность§!"
@@ -96,7 +77,29 @@
  fatalf.900.l: "£trigger_no£ Кризис отключён  - Чума £resource_menace_grey£"
  fatalf.900.l.tip: "£resource_menace_grey£ Включить кризис - Чума £trigger_yes£"
  fatalf.900.m: "£trigger_yes£ Кризис гарантирован - Чума £resource_menace_grey£"
+ fatalf.900.n: "£trigger_yes£ Кризис §Gактивирован§! - Чума £resource_menace_grey£"
  fatalf.900.o: "£trigger_no£ Кризис уже произошёл  - Чума £resource_menace_grey£"
  #--------------------------------------------------------------------------
  fatalf.900.i.tip: "§RЭто для тебя, Сэм.§!"
  fatalf.900.x: "§YЗакрыть окно§!"
+ fatalf_anomaly.001.a: "Эти машины могут быть важны, попробуйте разоружить их."
+ fatalf_anomaly.001.b: "Это слишком опасно, убирайтесь оттуда сейчас же!"
+ fatalf_anomaly.002.a: "Отлично, давайте изучим эти машины."
+ fatalf_anomaly.003.a: "Они старались изо всех сил."
+ fatalf_anomaly.004.a: "Это не стоило риска."
+ fatalf_anomaly.005.a: "Будьте аккуратны, при исследовании."
+ fatalf_anomaly.005.b: "Давайте уйдем отсюда, гигантские инопланетные монстры - не шутка!"
+ fatalf_anomaly.006.a: "Это может быть полезно."
+ fatalf_anomaly.007.a: "Трагическая потеря."
+ fatalf_anomaly.008.a: "Превосходная работа."
+ fatalf_anomaly.009.a: "В чём может быть смысл?"
+ fatalf_anomaly.010.a: "Что могло вызвать это?"
+ fatalf_anomaly.011.a: "Попробуйте включить."
+ fatalf_anomaly.011.b: "Оставьте работающим, как есть."
+ fatalf_anomaly.012.a: "Новая червоточина, ведущая через Галактику!"
+ fatalf_anomaly.013.a: "Настоящий позор."
+ fatalf_anomaly.014.a: "Чистое совпадение, верно?"
+ fatalf_anomaly.015.a: "Как они не были уничтожены?"
+ fatalf_anomaly.101.a: "Мы должны отправить кого-то для исследования."
+ fatalf_anomaly.101.b: "Это вряд ли будет полезным."
+ dmm_mod_fatalf: "$edict_fatalf_manager$"
