--- a/ptp_rus/localisation/russian/gpm_anomalies_l_russian.yml
+++ b/ptp_rus/localisation/russian/gpm_anomalies_l_russian.yml
@@ -19,33 +19,33 @@
 
  # normal
  GPM_BLACK_HOLE_CAT_DESC:0 "В этой сингулярности есть что-то необычное. Возможно, нам следует немного подождать."
- gpm_anomaly.78877.desc:0 "Трудно даже вообразить практическое применение для чёрной дыры. А поскольку она ничего не может нам предложить, то, как думают многие, и интересовать нас не должна. Однако не стоит забывать, что именно стремление познать окружающий мир и делает нас разумными существами."
+ gpm_anomaly.78877.desc:0 "Трудно даже вообразить практическое применение чёрной дыры. Поскольку мы даже теоретически не понимаем как её использовать, многие считают, что нам не стоит заострять на этом внимание. Однако не стоит забывать, что именно стремление познать окружающий мир и делает нас разумными существами."
  # hive mind
  GPM_BLACK_HOLE_CAT_HIVE_DESC:0 "В этой сингулярности есть что-то необычное. Возможно, мне следует немного подождать."
- gpm_anomaly.78877.desc.hive:0 "Трудно даже вообразить практическое применение для чёрной дыры. Однако, несмотря на сложность природы подобных сингулярностей, мне следует узнать о них больше. Только так я смогу расти… во всех смыслах."
+ gpm_anomaly.78877.desc.hive:0 "Трудно даже вообразить практическое применение чёрной дыры. Несмотря на сложный характер подобных явлений, мы должны узнать о них больше. Только так мы можем расти."
  # machine empire
- GPM_BLACK_HOLE_CAT_MACH_DESC:0 "Показатели излучения этой сингулярности не поддаются прогнозированию. Необходимо провести наблюдение и изучение."
- gpm_anomaly.78877.desc.mach:0 "Первоначальное наблюдение этой сингулярности показало, что она не вращается. Ранее существование чёрных дыр данного типа являлось лишь теоретическим ожиданием. Будучи занесённым в астрономические базы данных, этот обладающий уникальным местоположением и свойствами объект позволит повысить точность моделирования галактики и звёздных систем."
+ GPM_BLACK_HOLE_CAT_MACH_DESC:0 "Показатели излучения этой сингулярности не поддаются прогнозированию. Необходимо провести наблюдение, а затем и изучение."
+ gpm_anomaly.78877.desc.mach:0 "Первоначальные наблюдения за этой сингулярностью показали, что она не вращается. До сих пор существование подобного типа чёрных дыр являлось лишь теорией. Эта не вращающаяся чёрная дыра будет классифицирована в астрономических базах данных как чёрная дыра Шварцшильда. Её уникальное местоположение и свойства позволят повысить точность моделирования галактики и звёздных систем."
 
  #######################################
  #### Diamond In The Sky
  #######################################
-  GPM_SUN_CAT:0 "Алмаз в небе"
+ GPM_SUN_CAT:0 "Алмаз в небе"
  gpm_anomaly.78878.name:0 "Необычная яркость"
  gpm_d_sun_energy_deposit:0 "£energy£ +9\n"
 
  # normal
- GPM_SUN_CAT_DESC:0 "Это солнце выглядит очень ярким. Глубокое сканирование с низкой орбиты может пролить свет на этот феномен."
- gpm_anomaly.78878.desc:0 "Необычайная яркость этого солнца обусловлена значительно более высокой активностью его поверхности. Причиной же данного явления, по всей видимости, служит редкое сочетание химического состава и гравитационного давления. Мы могли бы воспользоваться этим!"
+ GPM_SUN_CAT_DESC:0 "Эта звезда выглядит неестественно яркой. Более тщательное сканирование с низкой орбиты может пролить свет на этот феномен."
+ gpm_anomaly.78878.desc:0 "Необычайная яркость этой звезды обусловлена значительно более высокой активностью её верхних слоёв. Невероятное сочетание элементов и гравитационного давления, кажется, является причиной этого явления. Мы могли бы воспользоваться этим!"
  # hive mind
- GPM_SUN_CAT_HIVE_DESC:0 "Это солнце выглядит очень ярким. Глубокое сканирование с низкой орбиты может пролить свет на этот феномен."
- gpm_anomaly.78878.desc.hive:0 "Необычайная яркость этого солнца обусловлена значительно более высокой активностью его поверхности. Причиной же данного явления, по всей видимости, служит редкое сочетание химического состава и гравитационного давления. Я мог бы воспользоваться этим!"
+ GPM_SUN_CAT_HIVE_DESC:0 "Эта звезда выглядит неестественно яркой. Более тщательное сканирование с низкой орбиты может пролить свет на этот феномен."
+ gpm_anomaly.78878.desc.hive:0 "Необычайная яркость этой звезды обусловлена значительно более высокой активностью её верхних слоёв. Невероятное сочетание элементов и гравитационного давления, кажется, является причиной этого явления. Мы могли бы воспользоваться этим!"
  # machine empire
- GPM_SUN_CAT_MACH_DESC:0 "Датчики фиксируют повышенное энергетическое излучение, исходящее от этой солнечной массы. Необходимо дальнейшее наблюдение."
- gpm_anomaly.78878.desc.mach:0 "Яркость этой солнечной массы значительно превышает прогнозируемую, что обусловлено высокой активностью её поверхности. Предполагается, что редкое сочетание химического состава и гравитационного давления, которым она обладает, провоцируют более сильные выбросы излучения. Выделяемая энергия может быть эффективно утилизирована."
+ GPM_SUN_CAT_MACH_DESC:0 "Датчики фиксируют повышенное энергетическое излучение, исходящее от этой звезды. Необходимо дальнейшее наблюдение."
+ gpm_anomaly.78878.desc.mach:0 "Яркость этой звезды значительно превышает прогнозируемую, что обусловлено высокой активностью её верхних слоёв. Предполагается, что более сильные выбросы излучения спровоцированы невероятной комбинацией элементов и гравитационного давления, которыми она обладает. Выделяемая энергия может быть эффективно преобразована."
 
  gpm_unusual_bright_sun:0 "Необычная яркость"
- gpm_unusual_bright_sun_desc:0 "Необычайная яркость этого солнца обусловлена значительно повышенной активностью его поверхности. Причиной же данного явления, по всей видимости, служит редкое сочетание химического состава и гравитационного давления. Мы могли бы воспользоваться этим!"
+ gpm_unusual_bright_sun_desc:0 "Необычайная яркость этой звезды обусловлена значительно более высокой активностью её верхних слоёв. Невероятное сочетание элементов и гравитационного давления, кажется, является причиной этого явления. Мы могли бы воспользоваться этим!"
 
  #######################################
  #### Something Strange
@@ -56,14 +56,14 @@
  # gpm_d_time_displaced_planet:0 "£physics£ +6\n£society£ +6\n£engineering£ +6\n"
 
  # normal
- GPM_WEIRD_CAT_DESC:0 "Наши сканеры фиксируют необычные показания. Этот мир совсем не таков, каким был занесён в наши звёздные карты по результатам сканирования с дальней дистанции. Нам §Hопределённо§! следует провести дальнейшее исследование."
- gpm_anomaly.78879.desc:0 "Хронометрические показатели этого мира весьма необычны. Всё говорит о том, что он каким-то образом оказался смещён во времени. Неизвестно, когда и откуда он взялся, но он, несомненно, способен пролить хоть немного света на природу самого времени!"
+ GPM_WEIRD_CAT_DESC:0 "Наши сканеры фиксируют необычные показания. Характеристики этого мира значительно отличаются от тех, что записаны в навигационных базах данных. Нам §Hопределённо§! следует провести её дальнейшее исследование."
+ gpm_anomaly.78879.desc:0 "Хронометрические показатели этого мира весьма необычны. Всё говорит о том, что он каким-то образом оказался смещён во времени. Неизвестно, когда и откуда он появился, но, несомненно, способен пролить хоть немного света на природу самого времени!"
  # hive mind
- GPM_WEIRD_CAT_HIVE_DESC:0 "Наши сканеры фиксируют необычные показания. Этот мир совсем не таков, каким был занесён в наши звёздные карты по результатам сканирования с дальней дистанции. §HЯ заинтригован§!."
- gpm_anomaly.78879.desc.hive:0 "Хронометрические показатели этого мира весьма необычны. Всё говорит о том, что он каким-то образом оказался смещён во времени. Неизвестно, когда и откуда он взялся, но он, несомненно, позволит мне узнать больше о природе самого времени!"
+ GPM_WEIRD_CAT_HIVE_DESC:0 "Наши сканеры фиксируют необычные показания. Характеристики этого мира значительно отличаются от тех, что записаны в навигационных базах данных. §HМы заинтригованы§!."
+ gpm_anomaly.78879.desc.hive:0 "Хронометрические показатели этого мира весьма необычны. Всё говорит о том, что он каким-то образом оказался смещён во времени. Неизвестно, когда и откуда он появился, но, несомненно, способен пролить хоть немного света на природу самого времени!"
  # machine empire
- GPM_WEIRD_CAT_MACH_DESC:0 "Наши сканеры фиксируют необычные показания. Характеристики этого мира значительно отличаются от тех, что занесены в навигационные базы данных и модели галактики. §HНеобходимо проведение серии замеров и наблюдений.§!"
- gpm_anomaly.78879.desc.mach:0 "Хронометрические показатели этого мира не соответсвуют ожидаемым. Он оказался смещён во времени под воздействием неизвестной силы. Дальнейшее наблюдение и эксперименты повысят вероятность установления причин, повлекших за собой необычное перемещение этого небесного тела. Время необходимо изучить более подробно."
+ GPM_WEIRD_CAT_MACH_DESC:0 "Наши сканеры фиксируют необычные показания. Характеристики этого мира значительно отличаются от тех, что записаны в навигационных базах данных. §HНеобходимо проведение серию тестов и наблюдений.§!"
+ gpm_anomaly.78879.desc.mach:0 "Хронометрические показатели этого мира весьма необычны. Он оказался смещён во времени под воздействием неизвестной силы. Дальнейшие наблюдения и эксперименты повысят вероятность установления причин этого явления на этом небесном теле. Аномалии связанные со временем необходимо изучать более тщательно."
 
  #######################################
  #### Unusual Emissions
@@ -74,16 +74,16 @@
 
  # normal
  GPM_PROTO_CAT_DESC:0 "Наши сканеры фиксируют необычное излучение, исходящее от поверхности этого астероида. Необходимо дальнейшее исследование."
- gpm_anomaly.78880.desc:0 "Поначалу эта астероидная станция казалась заброшенной и повреждённой, но когда мы начали прослушивать все частоты, то стали слышать странные голоса, будто немного ускоренные. При ближайшем рассмотрении внутреннее пространство станции оказалось заполнено странными кристаллами с биометаллическими сердечниками, практически живыми. Издаваемые всем этим местом звуки просто ужасны."
+ gpm_anomaly.78880.desc:0 "Поначалу, станция на астероиде казалась заброшенной и повреждённой, но при попытке прослушивать все частоты, мы обнаружили странные голоса, будто немного ускоренные. При ближайшем рассмотрении внутреннего пространства станции, оно оказалось заполнено странными кристаллами с биометаллическими сердечниками, практически живыми. Это место издаёт звуки, от которых стынет кровь в жилах и проступает холодный пот от ужаса."
  # hive mind
  GPM_PROTO_CAT_HIVE_DESC:0 "Сканеры фиксируют необычное излучение, исходящее от поверхности этого астероида. Необходимо дальнейшее исследование."
- gpm_anomaly.78880.desc.hive:0 "Поначалу эта астероидная станция казалась заброшенной и повреждённой, но когда я начал прослушивать все частоты, то стал слышать странные голоса, будто немного ускоренные. При ближайшем рассмотрении внутреннее пространство станции оказалось заполнено странными кристаллами с биометаллическими сердечниками, практически живыми. Голоса независимы сами по себе, однако постепенно становятся единым целым, как мы. Мне нужно узнать больше."
+ gpm_anomaly.78880.desc.hive:0 "Поначалу, станция на астероиде казалась заброшенной и повреждённой, но когда мы начал прослушивать все частоты, то обнаружили странные голоса, будто немного ускоренные. При ближайшем рассмотрении внутреннего пространства станции, оно оказалось заполнено странными кристаллами с биометаллическими сердечниками, практически живыми. Голоса уникальны по своей природе, однако если прислушаться, они становятся единым целым, как мы. Нам нужно узнать больше."
  # machine empire
  GPM_PROTO_CAT_MACH_DESC:0 "Сканеры фиксируют необычное излучение, исходящее от поверхности этого астероида. Необходимо дальнейшее исследование."
- gpm_anomaly.78880.desc.mach:0 "По результатам первоначального сканирования эта астероидная станция выглядела заброшенной и повреждённой энергетическими разрядами. Однако, когда наши сенсоры были перенастроены на более узкий диапазон частот, мы зафиксировали необычные звуковые шаблоны, постепенно ускоряющиеся. При непосредственном изучении было обнаружено, что внутреннее пространство станции заполнено странными кристаллами с биометаллическими сердечниками, которые постепенно перемещаются в сторону определённого места на станции."
+ gpm_anomaly.78880.desc.mach:0 "По предварительным результатам сканирования эта станция на астероиде выглядела заброшенной и повреждённой энергетическими разрядами. Однако, после перенастройки наших сенсоров на более узкий диапазон частот, мы обнаружили необычные звуковые шаблоны, постепенно ускоряющиеся. При непосредственном изучении во внутреннем пространстве станции мы нашли странные кристаллы с биометаллическими сердечниками, которые постепенно перемещаются в сторону определённого места на станции."
 
- gpm_protomolecule_infected_station:0 "Заражённая протомолекулами станция"
- gpm_protomolecule_infected_station_desc:0 "Поначалу эта астероидная станция казалась заброшенной и повреждённой, но когда мы начали прослушивать все частоты, то стали слышать странные голоса, будто немного ускоренные. При ближайшем рассмотрении внутреннее пространство станции оказалось заполнено необычными кристаллами с биометаллическими сердечниками, практически живыми. Звучание всего этого места просто ужасно."
+ gpm_protomolecule_infected_station:0 "Станция, заражённая протомолекулами"
+ gpm_protomolecule_infected_station_desc:0 "Поначалу, станция на астероиде казалась заброшенной и повреждённой, но при попытке прослушивать все частоты, мы обнаружили странные голоса, будто немного ускоренные. При ближайшем рассмотрении внутреннего пространства станции, оно оказалось заполнено странными кристаллами с биометаллическими сердечниками, практически живыми. Это место издаёт звуки, от которых стынет кровь в жилах и проступает холодный пот от ужаса."
 
  #######################################
  #### Flickering In The Darkness
@@ -94,10 +94,10 @@
 
  # normal
  GPM_CLOCK_CAT_DESC:0 "Что-то в этом пульсаре кажется неизменным. Он постоянно пульсирует, выделяя огромное количество энергии."
- gpm_anomaly.78881.desc:0 "Этот пульсар обладает не только высокой частотой, но и вращается с неизменной периодичностью, что делает его одними из самых точных часов во вселенной. С помощью этого небесного хронометра наши астрономы могут дать ответы на множество вопросов о звёздах, материи, и даже самом пространстве-времени, на которые иначе ответить было бы попросту невозможно."
+ gpm_anomaly.78881.desc:0 "Этот пульсар обладает не только высокой частотой пульсаций, но и вращается с неизменной периодичностью, что делает его одними из самых точных часов во Вселенной. С помощью этого небесного хронометра наши астрономы могут дать ответы на множество вопросов о звёздах, материи, и даже самом пространстве-времени, на которые иначе ответить было бы попросту невозможно."
  # hive mind
  GPM_CLOCK_CAT_HIVE_DESC:0 "Что-то в этом пульсаре кажется неизменным. Он постоянно пульсирует, выделяя огромное количество энергии."
- gpm_anomaly.78881.desc.hive:0 "Этот пульсар обладает не только высокой частотой, но и вращается с неизменной периодичностью, что делает его одними из самых точных часов во вселенной. С помощью этого небесного хронометра я смогу найти ответы на множество вопросов о звёздах, материи, и даже самом пространстве-времени, на которые иначе ответить было бы попросту невозможно."
+ gpm_anomaly.78881.desc.hive:0 "Этот пульсар обладает не только высокой частотой пульсаций, но и вращается с неизменной периодичностью, что делает его одними из самых точных часов во Вселенной. С помощью этого небесного хронометра мы могли бы дать ответы на многие вопросов о звёздах, материи, и даже самом пространстве-времени, на которые иначе ответить было бы попросту невозможно."
  # machine empire
- GPM_CLOCK_CAT_MACH_DESC:0 "Этот пульсар чрезвычайно постоянен. Он с неизменной частотой выделяет огромное количество энергии."
- gpm_anomaly.78881.desc.mach:0 "Этот пульсар вращается с редкой, но предсказуемой скоростью. Неизменная частота оборотов делает его одними из самых точных часов во вселенной. Использование подобных естественных хронометров позволит уменьшить вероятность ошибок синхронизации, вызванных перемещением на большие расстояния."
+ GPM_CLOCK_CAT_MACH_DESC:0 "Что-то в этом пульсаре кажется неизменным. Он постоянно пульсирует, выделяя огромное количество энергии."
+ gpm_anomaly.78881.desc.mach:0 "Этот пульсар вращается с редкой, но предсказуемой скоростью. Неизменная частота вращения делает его одними из самых точных часов во Вселенной. Использование подобных естественных хронометров позволит уменьшить вероятность ошибок синхронизации, вызванных перемещением на большие расстояния."
