--- a/ptp_rus/localisation/russian/gpm_decisions_l_russian.yml
+++ b/ptp_rus/localisation/russian/gpm_decisions_l_russian.yml
@@ -18,8 +18,8 @@
  #######################################
  # gpm_decision_limit:0 "\nDecisions Limit: §YDeposit§!\n§LOnly one deposit descison can be added per planet§!"
  # gpm_decision_need_colony:0 "£trigger_no£ Requires A §YColony§! In This System."
- # gpm_decision_space_resources_colony:244 "Analyse System Resources"
- # gpm_decision_space_resources_colony_desc:244 "The colony will analyse all unique features found on the planets in this system and create optimal strategies to exploit the resources found. (TO DO)"
+ # gpm_decision_space_resources_colony:0 "Analyse System Resources"
+ # gpm_decision_space_resources_colony_desc:0 "The colony will analyse all unique features found on the planets in this system and create optimal strategies to exploit the resources found. (TO DO)"
  # gpm_decision_precursor_shield_on:0 "Power Up Precursor Shield"
  # gpm_decision_precursor_shield_on_desc:0 "Powers up the precursor planetary shield."
  # gpm_decision_precursor_shield_off:0 "Power Down Precursor Shield"
@@ -29,11 +29,9 @@
  # gpm_decision_thunderstorms_energy:0 "Find Thunderstorm Energy Deposit"
  # gpm_decision_thunderstorms_energy_desc:0 "The colony in this system will find an optimal location on this planet for the extraction of energy from the planetary thunderstorms. (TO DO)"
  # gpm_decision_Asteroid_Showers_Minerals:0 "Asteroid Retreival Drones"
- # gpm_decision_Asteroid_Showers_Minerals_desc:0 "The colony in this system will designate an optimal and safe location where can build a drone asteroid retrieval station."
- # gpm_decisions.3.name:244 "§YIncomming Message§!: Potential Resources Found"
- # gpm_decisions.3.desc:244 "After analyzing the survey reports on the planets in this system we have found several locations worthy of investigation. We should check out all the uninhabitale planets in this system and decide if we want to invest resources to exploit them. It is possible we may need to research some new methods before we can gain access to these resources."
- # gpm_decisions.2.OK:244 "Message Received"
-
+ # gpm_decision_Asteroid_Showers_Minerals_desc:0 "The colony in this system will designate an optimal and safe location where can build a drone asteroid retrieval station."resources to exploit them. It is possible we may need to research some new methods before we can gain access to these resources."
+ # gpm_decisions.2.OK:0 "Message Received"
+ 
  #######################################
  #### Colony Decisions
  #######################################
@@ -65,7 +63,7 @@
  decision_gpm_carnivorous_flies_desc:0 "Наша колония попытается найти решение «проблемы» с плотоядными мухами."
 
  decision_gpm_lingering_pollution:0 "Очистить воздух"
- decision_gpm_lingering_pollution_desc:0 "Наша колония попытается очистить атмсоферу от загрязняющих её примесей."
+ decision_gpm_lingering_pollution_desc:0 "Наша колония попытается очистить атмосферу от загрязняющих её примесей."
 
  decision_gpm_resilent_parasites:0 "Война с паразитами"
  decision_gpm_resilent_parasites_desc:0 "Наша колония попытается найти лекарство от стойких паразитов, которые заражают её жителей."
@@ -74,7 +72,7 @@
  decision_gpm_hostile_flora_desc:0 "Посадив несколько очень инвазивных видов на планете, мы можем подавить местные растения и получить гораздо более дружелюбную окружающую среду."
 
  decision_gpm_Unstable_Tectonics:0 "Стабилизация разломов"
- decision_gpm_Unstable_Tectonics_desc:0 "Искусственные вентиляционные отверстия, пробуренные в линиях разлома этой планеты, периодически сбрасывают ищлишки давления, позволяя расплавленной породе и газу безопасно извергаться."
+ decision_gpm_Unstable_Tectonics_desc:0 "Искусственные вентиляционные отверстия, пробуренные в линиях разлома этой планеты, периодически сбрасывают излишки давления, позволяя расплавленной породе и газу безопасно извергаться."
 
  decision_gpm_unusual_seasons:0 "Создание облаков"
  decision_gpm_unusual_seasons_desc:0 "Тщательное создание искусственного облачного покрова в ключевых местах стабилизирует атмосферные потоки планеты."
@@ -83,7 +81,7 @@
  decision_gpm_fix_ozone_layer_desc:0 "Восстановление поврежденного озонового слоя на этой планете."
 
  decision_gpm_clear_toxic_gas:0 "Нейтрализовать токсичные газы"
- decision_gpm_clear_toxic_gas_desc:0 "На всей планете будут предприниматся усилия по нейтрализации облаков токсичных газов, что значительно улучшит условия жизни в этом мире."
+ decision_gpm_clear_toxic_gas_desc:0 "На всей планете будут предприниматься усилия по нейтрализации облаков токсичных газов, что значительно улучшит условия жизни в этом мире."
 
  #######################################
  #### Uninhabitable Decisions
@@ -114,7 +112,7 @@
  decision_gpm_habitat_asteroid_catchers_desc:0 "Постройте большие ангары для дронов-ловцов астероидов на этой орбитали, которые будут замедлять соседние астероиды и перенаправлять их к одному из отсеков обработки минералов."
  decision_gpm_habitat_particle_collectors:0 "Построить сборщики частиц"
  decision_gpm_habitat_particle_collectors_desc:0 "Постройте длинные массивы сборщиков частиц в нижней части этой орбитали, простирающиеся вплоть до верхней части атмосферы планеты внизу."
- decision_gpm_habitat_expedition_section:0 "Построить экспидиционные доки"
+ decision_gpm_habitat_expedition_section:0 "Построить экспедиционные доки"
  decision_gpm_habitat_expedition_section_desc:0 "Создание доков, специально разработанные для размещения всего оборудования, необходимого для выполнения экспедиций, включая новые и улучшенные карантинные клетки."
  decision_gpm_habitat_food_recyclers:0 "Установить переработчики отходов"
  decision_gpm_habitat_food_recyclers_desc:0 "Установите гиперэффективные утилизаторы отходов, превращающие их в съедобную жижу!"
@@ -125,7 +123,7 @@
  decision_gpm_habitat_archaeology_section:0 "Построить археологический центр"
  decision_gpm_habitat_archaeology_section_desc:0 "Переоборудовать сектор этой орбитали в качестве археологического центра."
  decision_gpm_habitat_pleasure_palace:0 "Построить район наслаждений"
- decision_gpm_habitat_pleasure_palace_desc:0 "Постройте наполненый паром район наслаждений."
+ decision_gpm_habitat_pleasure_palace_desc:0 "Постройте наполненный паром район наслаждений."
  decision_gpm_habitat_spice_markets:0 "Утвердить рынки специй"
  decision_gpm_habitat_spice_markets_desc:0 "Утвердить торговлю вызывающими зависимость специями."
  decision_gpm_habitat_gambling_licence:0 "Построить центр контроля азартных игр"
@@ -149,26 +147,29 @@
  #### Ringworld Decisions
  #######################################
  decision_gpm_ringworld_parabolic_forcefield:0 "Установить псионические силовые поля"
- decision_gpm_ringworld_parabolic_forcefield_desc:0 "Одно мощное псионическое силовое поле используется для сдерживания атмосферы на этой части мира-кольца. Это силовое поле, одновременно мощное и не энергозатратное, также улучшает обзор за пределами секции, что открывает поистине захватывающие виды."
- decision_gpm_ringworld_neural_nexus:0 "Установить нейронную связь"
- decision_gpm_ringworld_neural_nexus_desc:0 "Обширная сеть модулей машинного обучения установлена по всей кольцевой секции, позволяя этой части кольцевого мира решать проблемы и повышать свою эффективность самостоятельно."
+ decision_gpm_ringworld_parabolic_forcefield_desc:0 "Мощные псионические силовые поля используются для сдерживания атмосферы секций мира-кольца. Будучи одновременно сильным и менее энергозатратным, подобное силовое поле также значительно увеличивает обзор за пределами секции кольца, открывая поистине захватывающие дух виды."
+ decision_gpm_ringworld_neural_nexus:0 "Создать встроенную нейронную связь"
+ decision_gpm_ringworld_neural_nexus_desc:0 "Обширная сеть модулей машинного обучения установлена по всей секции мира-кольца, позволяя ей самостоятельно решать возникающие проблемы и делать себя более эффективной."
  decision_gpm_ringworld_idyllic_gardens:0 "Засеять идиллические сады"
- decision_gpm_ringworld_idyllic_gardens_desc:0 "Постройте несколько секторов на этом участке мира-кольца с невероятно красивыми садами."
- decision_gpm_ringworld_xeno_zoo:0 "Учредить заповедник ксенофауны"
+ decision_gpm_ringworld_idyllic_gardens_desc:0 "Построить несколько секторов на этой секции мира-кольца, покрытых немыслимо прекрасными садами."
+ decision_gpm_ringworld_xeno_zoo:0 "Учредить заповедники дикой ксенофауны"
  decision_gpm_ringworld_xeno_zoo_desc:0 "Обширные площади этого участка кольца будут назначены заповедниками ксенофауны."
- decision_gpm_ringworld_badlands:0 "Выделить секторы беззакония"
- decision_gpm_ringworld_badlands_desc:0 "Обозначьте этот сектор мира-кольца как сектор, где не действуют законы империи. Пусть люди сами решают, как им управлять."
+ decision_gpm_ringworld_badlands:0 "Создать зоны беззакония"
+ decision_gpm_ringworld_badlands_desc:0 "Назначить эту секцию мира-кольца территорией, где исполнение законов не обязательно. Пусть его жители решают сами, как им управлять."
  decision_gpm_ringworld_simulators:0 "Создать секторы симуляции"
- decision_gpm_ringworld_simulators_desc:0 "Установите большие тренировочные секторы на этом участке мира-кольца, чтобы наше население было готово, когда произойдет неизбежное."
+ decision_gpm_ringworld_simulators_desc:0 "Создать большие тренировочные секторы на этой секции кольца, которые позволят нашему населению подготовиться к неизбежному."
  decision_gpm_ringworld_endless_oceans:0 "Создать обширные океаны"
- decision_gpm_ringworld_endless_oceans_desc:0 "Терраформируйте большие области этой части мира-кольца, чтобы она могла поддерживать огромные и бескрайние океаны."
- decision_gpm_ringworld_mass_transit:0 "Пострить систему массового перемещения"
- decision_gpm_ringworld_mass_transit_desc:0 "Установите систему общественного транспорта, охватывающую весь участок мира-кольца, что значительно облегчит удовлетворение потребностей населения."
+ decision_gpm_ringworld_endless_oceans_desc:0 "Терраформировать обширные участки этой секции мира-кольца, чтобы она могла содержать бескрайний океан."
+ decision_gpm_ringworld_mass_transit:0 "Построить систему общественного транспорта"
+ decision_gpm_ringworld_mass_transit_desc:0 "Создать систему общественного транспорта, охватывающую всю секцию мира-кольца, что существенно поможет удовлетворить потребности населения."
 
  #######################################
  #### Machine World Decisions
  #######################################
-
+ decision_gpm_upgrade_machine_world:0 "Улучшить мир машин"
+ decision_gpm_upgrade_machine_world_desc:0 "Технология всегда может быть улучшена с помощью новых технологий!"
+ decision_gpm_upgrade_machine_world_TT:0 "При §Hулучшении§! одного из аспектов этого мира машин с помощью £minor_artifacts£ §Hмалых артефактов§! будет улучшено производство одного из данных ресурсов: £physics_research£ £society_research£ £engineering_research£, £energy£, £minerals£, £alloys£ или £rare_crystals£ £exotic_gases£ £volatile_motes£."
+ 
  #######################################
  #### Hive Decisions
  #######################################
@@ -176,14 +177,15 @@
  #######################################
  #### Relic Decisions
  #######################################
- decision_gpm_Floating_Island_Housing:0 "Построить парящие острова"
- decision_gpm_Floating_Island_Housing_desc:0 "Построить огромные искусственные парящие острова в этом мире."
+ decision_gpm_Floating_Island_Housing:0 "Создать парящие острова"
+ decision_gpm_Floating_Island_Housing_desc:0 "Создать огромные искусственные парящие острова в этом мире."
  decision_gpm_Floating_Island_Housing_effects:0 "Максимальное число районов: §G+1§!\nЖильё на планете: §G+10§!"
 
  decision_gpm_machine_world_core_relic:0 "Ассимилировать мир"
- decision_gpm_machine_world_core_relic_desc:0 "Преобразовать эту планету в мир машин с помощью реликвии §Yзаряженное ядро мира машин§!.\n"
- decision_gpm_machine_world_core_relic_tt:0 "§Gзагрузка boot.ini..\nожидайте...§!"
+ decision_gpm_machine_world_core_relic_desc:0 "Преобразовать эту планету в мир машин с помощью реликвии §YЗаряженное ядро мира машин§!.\n"
+ decision_gpm_machine_world_core_relic_tt:0 "§GЗагрузка boot.ini...\nожидайте...§!"
 
  decision_gpm_shield_generator_arrays:0 "Построить массив щитов"
  decision_gpm_shield_generator_arrays_desc:0 "Постройте несколько защитных массивов по всему этому миру. Они создадут планетарный щит, способный отразить самые мощные энергетические атаки."
+ # decision_gpm_shield_generator_arrays_tt:0 "§YEncase§! this world in a near-impenetrable shield.\nAdd §YAdvanced Shield Arrays§! to §G[root.GetName]§!"
  decision_gpm_shield_generator_arrays_tt:0 "§YЗаключить§! этот мир в почти непроницаемый щит."
